REGRESSION(?): subtitle text sizing is sometimes inconsistent https://bugs.webkit.org/show_bug.cgi?id=228786 <rdar://problem/80525509>

Reviewed by Eric Carlson.

Tested manually. I'm still not 100% sure of the root cause of this, but after talking with
some folks more familiar with WebKit's media "stack" it seems like this only happens with
in-band non-VTT subtitle tracks that have their own styling. The fix is also pretty obvious.

* html/track/TextTrackCueGeneric.cpp:
(WebCore::TextTrackCueGeneric::setFontSize):
We should still pass along the new font size (and `bool important`) even if we don't have a
display tree yet, as the font size (and `bool important`) are used when the display tree is
created, meaning that we shouldn't have to wait for another `setFontSize` call after the
display tree is created in order to update the font size.


Canonical link: https://commits.webkit.org/240259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280648 268f45cc-cd09-0410-ab3c-d52691b4dbfc